--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
     ext.versions = [
-            'kotlin': '1.3.31',
-            'ktor': '1.2.0-rc2',
+            'kotlin': '1.3.41',
+            'ktor': '1.2.3',
             'moshi': '1.8.0',
-            'okio': '2.1.0',
+            'okio': '2.2.2',
             'appengine_version': '1.9.74',
             'appengine_plugin_version': '2.0.1',
-            'retrofit': '2.5.1-SNAPSHOT',
-            'lifecycle_version': '2.2.0-alpha02'
+            'retrofit': '2.6.1',
+            'lifecycle_version': '2.2.0-alpha03'
     ]
 
     ext.deps = [
@@ -42,7 +42,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath "com.google.cloud.tools:appengine-gradle-plugin:${versions.appengine_plugin_version}"
 
