--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     ext.versions = [
             'kotlin': '1.3.41',
             'ktor': '1.2.3',
-            'moshi': '1.8.0',
             'okio': '2.2.2',
             'appengine_version': '1.9.74',
             'appengine_plugin_version': '2.0.1',
             'retrofit': '2.6.1',
-            'lifecycle_version': '2.2.0-alpha03'
+            'lifecycle_version': '2.2.0-alpha03',
+            'activityx': '1.1.0-alpha02',
+            'fragmentx': '1.2.0-alpha02'
     ]
 
     ext.deps = [
@@ -23,12 +24,6 @@ buildscript {
                     'server': "io.ktor:ktor-server-core:${versions.ktor}",
                     'netty': "io.ktor:ktor-server-netty:${versions.ktor}",
                     'test': "io.ktor:ktor-server-test-host:${versions.ktor}",
-            ],
-            'moshi': [
-                    'adapters': "com.squareup.moshi:moshi-adapters:${versions.moshi}",
-                    'client': "com.squareup.moshi:moshi:${versions.moshi}",
-                    'kotlin': "com.squareup.moshi:moshi-kotlin:${versions.moshi}",
-                    'codegen': "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}"
             ],
             'okio': "com.squareup.okio:okio:${versions.okio}",
             'retrofit': [
@@ -57,6 +52,7 @@ allprojects {
         jcenter()
         maven { url "https://kotlin.bintray.com/ktor" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+        maven { url "https://jitpack.io" }
     }
 }
 
