--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.joshafeinberg.oreotracker"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -33,17 +33,26 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
+
+    viewBinding {
+        enabled = true
+    }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0-alpha01'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation "androidx.lifecycle:lifecycle-common-java8:${versions.lifecycle_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle_version}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle_version}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:${versions.lifecycle_version}"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
     implementation "androidx.activity:activity:${versions.activityx}"
@@ -51,7 +60,7 @@ dependencies {
     implementation "androidx.fragment:fragment:${versions.fragmentx}"
     implementation "androidx.fragment:fragment-ktx:${versions.fragmentx}"
 
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation deps.retrofit.client
     implementation deps.retrofit.gson
 
