--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,30 +45,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
-    implementation 'androidx.appcompat:appcompat:1.2.0-alpha02'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    implementation "androidx.lifecycle:lifecycle-common-java8:${versions.lifecycle_version}"
-    implementation "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle_version}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle_version}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:${versions.lifecycle_version}"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation deps.kotlin.stdlib
 
-    implementation "androidx.activity:activity:${versions.activityx}"
-    implementation "androidx.activity:activity-ktx:${versions.activityx}"
-    implementation "androidx.fragment:fragment:${versions.fragmentx}"
-    implementation "androidx.fragment:fragment-ktx:${versions.fragmentx}"
+    implementation deps.androidx.activityktx
+    implementation deps.androidx.appcompat
+    implementation deps.androidx.constraintlayout
+    implementation deps.androidx.coordinatorlayout
+    implementation deps.androidx.lifecycle.common
+    implementation deps.androidx.lifecycle.extensions
+    implementation deps.androidx.lifecycle.savedstate
+    implementation deps.androidx.lifecycle.viewmodel
+    implementation deps.androidx.fragmentktx
 
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation deps.material
+
     implementation deps.retrofit.client
     implementation deps.retrofit.gson
+    implementation deps.retrofit.logger
 
     implementation project(':sharedmodule')
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 androidExtensions {
