--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation deps.compose.tooling
     implementation deps.compose.layout
     implementation deps.compose.material
+    implementation deps.compose.navigation
     implementation deps.compose.themeAdapter
     //implementation deps.compose.savedInstanceState
     implementation deps.compose.uiLiveData
